apps/garage-web/blog/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-web-blog-jameswynn-com
spec:
  parentRefs:
    - name: envoy-towonel
      namespace: networking
      sectionName: sub-jameswynn-https
  hostnames:
    - "blog.jameswynn.com"
  rules:
    - backendRefs:
        # - name: garage-web-blog-anubis
        #   port: 8080
        - name: garage-cluster
          namespace: default
          port: 3902
